// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Character Snapshot Tests > pathfinder_complex.json 1`] = `
Character {
  "ac": ArmorClass {
    "abilityMod": 1,
    "affectedByCondition": false,
    "bonusAc": 0,
    "bonusFf": 0,
    "bonusTouch": 0,
    "flatFooted": 15,
    "notes": "",
    "primaryAbility": "dex",
    "secondaryAbility": null,
    "total": 16,
    "touch": 11,
  },
  "cha": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 3,
    "conditionNotes": [],
    "damage": 0,
    "key": "cha",
    "mod": 3,
    "notes": "",
    "skillCheckMod": 3,
    "temp": 0,
    "total": 16,
    "totalNoTemp": 16,
  },
  "classes": Classes {
    "list": [
      Class {
        "bab": 5,
        "favored": true,
        "fort": 1,
        "hitDice": 4,
        "level": 4,
        "levelRanks": 5,
        "miscRanks": 3,
        "name": "First Class",
        "ref": 2,
        "speed": 5,
        "will": 3,
      },
      Class {
        "bab": 4,
        "favored": false,
        "fort": 3,
        "hitDice": 4,
        "level": 1,
        "levelRanks": 10,
        "miscRanks": 0,
        "name": "Second Class",
        "ref": 2,
        "speed": 0,
        "will": 1,
      },
    ],
    "ranks": 43,
  },
  "combat": Combat {
    "attacks": [
      Attack {
        "attack": AttackRoll {
          "abilityModValue": 0,
          "abilityModifier": "str",
          "attacks": [
            12,
            7,
          ],
          "baseModifier": "babFull",
          "bonusModifier": 3,
          "critRange": "20",
          "range": "",
          "versus": "AC",
        },
        "category": "",
        "damage": Damage {
          "damage": "",
          "notes": "",
        },
        "details": [
          [
            "Crit Range",
            "20",
          ],
          [
            "Attacks",
            "+12/+7",
          ],
        ],
        "hasAttack": true,
        "hasDamage": false,
        "name": "Test Attack",
        "notes": "",
        "open": true,
        "showNotes": true,
        "type": "",
      },
    ],
    "bab": BaseAttackBonus {
      "bonus": 0,
      "mod": 9,
      "notes": "",
    },
    "cmb": CombatManeuverBonus {
      "bonus": 0,
      "mod": 9,
      "notes": "",
    },
    "cmbAbility": "str",
    "cmd": CombatManeuverDefense {
      "bonus": 0,
      "mod": 20,
      "notes": "",
    },
    "meeleeAbility": "str",
    "rangedAbility": "dex",
    "sr": SpellResistance {
      "base": 0,
      "misc": 0,
      "notes": "",
      "total": 0,
    },
  },
  "con": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 1,
    "conditionNotes": [],
    "damage": 0,
    "key": "con",
    "mod": 1,
    "notes": "",
    "skillCheckMod": 1,
    "temp": 0,
    "total": 13,
    "totalNoTemp": 13,
  },
  "conditions": Conditions {
    "blinded": false,
    "cowering": false,
    "dazzled": false,
    "fatigued": false,
    "mods": Mods {
      "effectsGetter": [Function],
    },
    "negative_levels": 0,
  },
  "dex": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 1,
    "conditionNotes": [],
    "damage": 0,
    "key": "dex",
    "mod": 1,
    "notes": "",
    "skillCheckMod": 2,
    "temp": 0,
    "total": 12,
    "totalNoTemp": 12,
  },
  "equipment": Equipment {
    "acItems": [
      AcItem {
        "acBonus": 5,
        "chkPenalty": 1,
        "defBonus": 0,
        "dodBonus": 0,
        "equipped": true,
        "ffBonus": 0,
        "maxDexBonus": 6,
        "name": "Test Armor",
        "natBonus": 0,
        "notes": "",
        "spellFailure": 10,
        "touchBonus": 0,
        "type": "light",
      },
    ],
    "items": [
      Item {
        "chargeType": "none",
        "children": [
          Item {
            "chargeType": "perDay",
            "children": [],
            "containerOpen": false,
            "description": "",
            "equipped": true,
            "isContainer": false,
            "name": "Test Item",
            "perDay": 2,
            "quantity": 5,
            "remaining": 1,
            "weight": 1,
          },
        ],
        "containerOpen": true,
        "description": "",
        "equipped": true,
        "isContainer": true,
        "name": "Test Container",
        "perDay": 1,
        "quantity": 1,
        "remaining": 0,
        "weight": 0,
      },
    ],
  },
  "feats": [
    Feat {
      "benefits": "Test Benefits",
      "name": "Test Feat",
      "normal": "Test Normal",
      "open": true,
      "prerequisites": "Prerequisites",
      "special": "Test Special",
      "type": "general",
    },
  ],
  "fort": Save {
    "ability": "con",
    "bonus": 0,
    "key": "fort",
    "misc": 0,
    "mod": 5,
    "notes": "",
  },
  "hp": HitPoints {
    "average": 6,
    "bonus": 10,
    "conHp": 5,
    "current": 65,
    "damageTaken": 0,
    "max": 65,
    "nonlethalDamage": 10,
    "rolled": 50,
    "temp": 20,
  },
  "init": Initiative {
    "misc": 0,
    "mod": 1,
    "notes": "",
  },
  "int": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 2,
    "conditionNotes": [],
    "damage": 0,
    "key": "int",
    "mod": 2,
    "notes": "",
    "skillCheckMod": 2,
    "temp": 0,
    "total": 14,
    "totalNoTemp": 14,
  },
  "money": Money {
    "cp": 1,
    "gp": 3,
    "notes": "",
    "pp": 4,
    "sp": 2,
  },
  "name": "Test Character",
  "persona": Persona {
    "charm": Facet {
      "notes": "",
      "rank": 0,
    },
    "genius": Facet {
      "notes": "",
      "rank": 0,
    },
    "heroism": Facet {
      "notes": "",
      "rank": 0,
    },
    "notes": "",
    "sacrifice": Facet {
      "notes": "",
      "rank": 0,
    },
    "sagacity": Facet {
      "notes": "",
      "rank": 0,
    },
    "subterfuge": Facet {
      "notes": "",
      "rank": 0,
    },
  },
  "race": Race {
    "cha": 6,
    "con": 3,
    "dex": 2,
    "int": 4,
    "name": "Test Race",
    "size": "medium",
    "speed": 30,
    "str": 1,
    "wis": 5,
  },
  "ref": Save {
    "ability": "dex",
    "bonus": 0,
    "key": "ref",
    "misc": 0,
    "mod": 5,
    "notes": "",
  },
  "settings": Settings {
    "addConToHeal": false,
    "enableExperimentalConditions": true,
    "enableMacroHighlighting": true,
    "experimentalFeatures": false,
    "heal": true,
    "healAbilityDamage": true,
    "rechargeItems": true,
    "rechargeSLA": true,
    "rechargeTraits": true,
    "resetPreparedSpells": true,
    "resetSpellUsage": true,
    "showMagicPage": true,
    "useAverageHP": false,
    "usePersonaSystem": true,
  },
  "skills": SkillList {
    "acrobatics": SkillGroup {
      "key": "acrobatics",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": true,
          "conditionNotes": [],
          "key": "acrobatics",
          "misc": 0,
          "mod": 10,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 5,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "appraise": SkillGroup {
      "key": "appraise",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "appraise",
          "misc": 0,
          "mod": 7,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 5,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "bluff": SkillGroup {
      "key": "bluff",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "bluff",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "climb": SkillGroup {
      "key": "climb",
      "skills": [
        Skill {
          "ability": "str",
          "classSkill": false,
          "conditionNotes": [],
          "key": "climb",
          "misc": 0,
          "mod": 1,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "craft": SkillGroup {
      "key": "craft",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "craft",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "diplomacy": SkillGroup {
      "key": "diplomacy",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "diplomacy",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "disableDevice": SkillGroup {
      "key": "disableDevice",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "disableDevice",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "disguise": SkillGroup {
      "key": "disguise",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "disguise",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "escapeArtist": SkillGroup {
      "key": "escapeArtist",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "escapeArtist",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "fly": SkillGroup {
      "key": "fly",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "fly",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "handleAnimal": SkillGroup {
      "key": "handleAnimal",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "handleAnimal",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "heal": SkillGroup {
      "key": "heal",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "heal",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "intimidate": SkillGroup {
      "key": "intimidate",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "intimidate",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "knowledgeArcana": SkillGroup {
      "key": "knowledgeArcana",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeArcana",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeDungeoneering": SkillGroup {
      "key": "knowledgeDungeoneering",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeDungeoneering",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeEngineering": SkillGroup {
      "key": "knowledgeEngineering",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeEngineering",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeGeography": SkillGroup {
      "key": "knowledgeGeography",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeGeography",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeHistory": SkillGroup {
      "key": "knowledgeHistory",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeHistory",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeLocal": SkillGroup {
      "key": "knowledgeLocal",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeLocal",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeNature": SkillGroup {
      "key": "knowledgeNature",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeNature",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeNobility": SkillGroup {
      "key": "knowledgeNobility",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeNobility",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgePlanes": SkillGroup {
      "key": "knowledgePlanes",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgePlanes",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeReligion": SkillGroup {
      "key": "knowledgeReligion",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeReligion",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "linguistics": SkillGroup {
      "key": "linguistics",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "linguistics",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "perception": SkillGroup {
      "key": "perception",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "perception",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "perform": SkillGroup {
      "key": "perform",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "perform",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "profession": SkillGroup {
      "key": "profession",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "profession",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "ride": SkillGroup {
      "key": "ride",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "ride",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "senseMotive": SkillGroup {
      "key": "senseMotive",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "senseMotive",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "sleightOfHand": SkillGroup {
      "key": "sleightOfHand",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "sleightOfHand",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "spellcraft": SkillGroup {
      "key": "spellcraft",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "spellcraft",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "stealth": SkillGroup {
      "key": "stealth",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "stealth",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "survival": SkillGroup {
      "key": "survival",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "survival",
          "misc": 0,
          "mod": 2,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "swim": SkillGroup {
      "key": "swim",
      "skills": [
        Skill {
          "ability": "str",
          "classSkill": false,
          "conditionNotes": [],
          "key": "swim",
          "misc": 0,
          "mod": 1,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "useMagicDevice": SkillGroup {
      "key": "useMagicDevice",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "useMagicDevice",
          "misc": 0,
          "mod": 3,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
  },
  "spells": Spells {
    "dcAbility": "int",
    "dcBonus": 3,
    "level_0": SpellLevelList {
      "dc": 10,
      "dcBonus": 0,
      "known": 0,
      "level": "level_0",
      "perDay": 5,
      "perDayBonus": 0,
      "spells": [
        Spell {
          "area": "",
          "attack": SpellAttack {
            "critMultiplier": 2,
            "critRange": 20,
            "hasAttack": true,
            "mod": 0,
            "type": "rangedTouch",
          },
          "castingTime": "",
          "classAndLevel": "",
          "components": "",
          "damage": [],
          "description": "",
          "duration": "",
          "effect": "",
          "isDomainSpell": false,
          "name": "Test Cantrip",
          "notes": "",
          "open": true,
          "prepared": 0,
          "range": "",
          "savingThrow": SpellSave {
            "dcMod": 0,
            "effect": "",
            "hasSave": false,
          },
          "school": "",
          "spellResistance": "",
          "targets": "",
          "used": 0,
        },
      ],
      "totalPerDay": 5,
    },
    "level_1": SpellLevelList {
      "dc": 11,
      "dcBonus": 0,
      "known": 0,
      "level": "level_1",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_2": SpellLevelList {
      "dc": 12,
      "dcBonus": 0,
      "known": 0,
      "level": "level_2",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_3": SpellLevelList {
      "dc": 13,
      "dcBonus": 0,
      "known": 0,
      "level": "level_3",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_4": SpellLevelList {
      "dc": 14,
      "dcBonus": 0,
      "known": 0,
      "level": "level_4",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_5": SpellLevelList {
      "dc": 15,
      "dcBonus": 0,
      "known": 0,
      "level": "level_5",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_6": SpellLevelList {
      "dc": 16,
      "dcBonus": 0,
      "known": 0,
      "level": "level_6",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_7": SpellLevelList {
      "dc": 17,
      "dcBonus": 0,
      "known": 0,
      "level": "level_7",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_8": SpellLevelList {
      "dc": 18,
      "dcBonus": 0,
      "known": 0,
      "level": "level_8",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_9": SpellLevelList {
      "dc": 19,
      "dcBonus": 0,
      "known": 0,
      "level": "level_9",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "spellLikeAbilities": [
      SpellLikeAbility {
        "area": "",
        "attack": SpellAttack {
          "critMultiplier": 2,
          "critRange": 20,
          "hasAttack": true,
          "mod": 5,
          "type": "rangedTouch",
        },
        "castingTime": "",
        "classAndLevel": "",
        "damage": [
          SpellAttackDamage {
            "damage": "1d6",
            "type": "Fire",
          },
        ],
        "description": "",
        "duration": "",
        "effect": "",
        "name": "SLA Test",
        "notes": "",
        "open": true,
        "perDay": 1,
        "range": "",
        "remaining": 0,
        "savingThrow": SpellSave {
          "dcMod": 0,
          "effect": "",
          "hasSave": true,
        },
        "school": "",
        "spellResistance": "",
        "targets": "",
        "type": "atWill",
      },
    ],
  },
  "str": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "str",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 1,
    "temp": 0,
    "total": 11,
    "totalNoTemp": 11,
  },
  "system": "pathfinder",
  "traits": [
    Trait {
      "description": "",
      "name": "Test Trait",
      "open": false,
      "perDay": 5,
      "remaining": 3,
    },
  ],
  "version": 4,
  "will": Save {
    "ability": "wis",
    "bonus": 0,
    "key": "will",
    "misc": 0,
    "mod": 6,
    "notes": "",
  },
  "wis": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 2,
    "conditionNotes": [],
    "damage": 0,
    "key": "wis",
    "mod": 2,
    "notes": "",
    "skillCheckMod": 2,
    "temp": 0,
    "total": 15,
    "totalNoTemp": 15,
  },
}
`;

exports[`Character Snapshot Tests > pathfinder_default.json 1`] = `
Character {
  "ac": ArmorClass {
    "abilityMod": 0,
    "affectedByCondition": false,
    "bonusAc": 0,
    "bonusFf": 0,
    "bonusTouch": 0,
    "flatFooted": 10,
    "notes": "",
    "primaryAbility": "dex",
    "secondaryAbility": null,
    "total": 10,
    "touch": 10,
  },
  "cha": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "cha",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
  "classes": Classes {
    "list": [
      Class {
        "bab": 0,
        "favored": false,
        "fort": 0,
        "hitDice": 4,
        "level": 1,
        "levelRanks": 0,
        "miscRanks": 0,
        "name": "Unnamed Class",
        "ref": 0,
        "speed": 0,
        "will": 0,
      },
    ],
    "ranks": 0,
  },
  "combat": Combat {
    "attacks": [],
    "bab": BaseAttackBonus {
      "bonus": 0,
      "mod": 0,
      "notes": "",
    },
    "cmb": CombatManeuverBonus {
      "bonus": 0,
      "mod": 0,
      "notes": "",
    },
    "cmbAbility": "str",
    "cmd": CombatManeuverDefense {
      "bonus": 0,
      "mod": 10,
      "notes": "",
    },
    "meeleeAbility": "str",
    "rangedAbility": "dex",
    "sr": SpellResistance {
      "base": 0,
      "misc": 0,
      "notes": "",
      "total": 0,
    },
  },
  "con": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "con",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
  "conditions": Conditions {
    "blinded": false,
    "cowering": false,
    "dazzled": false,
    "fatigued": false,
    "mods": Mods {
      "effectsGetter": [Function],
    },
    "negative_levels": 0,
  },
  "dex": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "dex",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
  "equipment": Equipment {
    "acItems": [],
    "items": [],
  },
  "feats": [],
  "fort": Save {
    "ability": "con",
    "bonus": 0,
    "key": "fort",
    "misc": 0,
    "mod": 0,
    "notes": "",
  },
  "hp": HitPoints {
    "average": 3,
    "bonus": 0,
    "conHp": 0,
    "current": 0,
    "damageTaken": 0,
    "max": 0,
    "nonlethalDamage": 0,
    "rolled": 0,
    "temp": 0,
  },
  "init": Initiative {
    "misc": 0,
    "mod": 0,
    "notes": "",
  },
  "int": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "int",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
  "money": Money {
    "cp": 0,
    "gp": 0,
    "notes": "",
    "pp": 0,
    "sp": 0,
  },
  "name": "Unnamed Character",
  "persona": Persona {
    "charm": Facet {
      "notes": "",
      "rank": 0,
    },
    "genius": Facet {
      "notes": "",
      "rank": 0,
    },
    "heroism": Facet {
      "notes": "",
      "rank": 0,
    },
    "notes": "",
    "sacrifice": Facet {
      "notes": "",
      "rank": 0,
    },
    "sagacity": Facet {
      "notes": "",
      "rank": 0,
    },
    "subterfuge": Facet {
      "notes": "",
      "rank": 0,
    },
  },
  "race": Race {
    "cha": 0,
    "con": 0,
    "dex": 0,
    "int": 0,
    "name": "Unnamed Race",
    "size": "medium",
    "speed": 30,
    "str": 0,
    "wis": 0,
  },
  "ref": Save {
    "ability": "dex",
    "bonus": 0,
    "key": "ref",
    "misc": 0,
    "mod": 0,
    "notes": "",
  },
  "settings": Settings {
    "addConToHeal": false,
    "enableExperimentalConditions": false,
    "enableMacroHighlighting": true,
    "experimentalFeatures": false,
    "heal": true,
    "healAbilityDamage": true,
    "rechargeItems": true,
    "rechargeSLA": true,
    "rechargeTraits": true,
    "resetPreparedSpells": true,
    "resetSpellUsage": true,
    "showMagicPage": true,
    "useAverageHP": false,
    "usePersonaSystem": false,
  },
  "skills": SkillList {
    "acrobatics": SkillGroup {
      "key": "acrobatics",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "acrobatics",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "appraise": SkillGroup {
      "key": "appraise",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "appraise",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "bluff": SkillGroup {
      "key": "bluff",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "bluff",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "climb": SkillGroup {
      "key": "climb",
      "skills": [
        Skill {
          "ability": "str",
          "classSkill": false,
          "conditionNotes": [],
          "key": "climb",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "craft": SkillGroup {
      "key": "craft",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "craft",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "diplomacy": SkillGroup {
      "key": "diplomacy",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "diplomacy",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "disableDevice": SkillGroup {
      "key": "disableDevice",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "disableDevice",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "disguise": SkillGroup {
      "key": "disguise",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "disguise",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "escapeArtist": SkillGroup {
      "key": "escapeArtist",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "escapeArtist",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "fly": SkillGroup {
      "key": "fly",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "fly",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "handleAnimal": SkillGroup {
      "key": "handleAnimal",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "handleAnimal",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "heal": SkillGroup {
      "key": "heal",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "heal",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "intimidate": SkillGroup {
      "key": "intimidate",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "intimidate",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "knowledgeArcana": SkillGroup {
      "key": "knowledgeArcana",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeArcana",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeDungeoneering": SkillGroup {
      "key": "knowledgeDungeoneering",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeDungeoneering",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeEngineering": SkillGroup {
      "key": "knowledgeEngineering",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeEngineering",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeGeography": SkillGroup {
      "key": "knowledgeGeography",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeGeography",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeHistory": SkillGroup {
      "key": "knowledgeHistory",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeHistory",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeLocal": SkillGroup {
      "key": "knowledgeLocal",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeLocal",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeNature": SkillGroup {
      "key": "knowledgeNature",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeNature",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeNobility": SkillGroup {
      "key": "knowledgeNobility",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeNobility",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgePlanes": SkillGroup {
      "key": "knowledgePlanes",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgePlanes",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "knowledgeReligion": SkillGroup {
      "key": "knowledgeReligion",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "knowledgeReligion",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "linguistics": SkillGroup {
      "key": "linguistics",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "linguistics",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "perception": SkillGroup {
      "key": "perception",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "perception",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "perform": SkillGroup {
      "key": "perform",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "perform",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "profession": SkillGroup {
      "key": "profession",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "profession",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "ride": SkillGroup {
      "key": "ride",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "ride",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "senseMotive": SkillGroup {
      "key": "senseMotive",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "senseMotive",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "sleightOfHand": SkillGroup {
      "key": "sleightOfHand",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "sleightOfHand",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "spellcraft": SkillGroup {
      "key": "spellcraft",
      "skills": [
        Skill {
          "ability": "int",
          "classSkill": false,
          "conditionNotes": [],
          "key": "spellcraft",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
    "stealth": SkillGroup {
      "key": "stealth",
      "skills": [
        Skill {
          "ability": "dex",
          "classSkill": false,
          "conditionNotes": [],
          "key": "stealth",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": true,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "survival": SkillGroup {
      "key": "survival",
      "skills": [
        Skill {
          "ability": "wis",
          "classSkill": false,
          "conditionNotes": [],
          "key": "survival",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "swim": SkillGroup {
      "key": "swim",
      "skills": [
        Skill {
          "ability": "str",
          "classSkill": false,
          "conditionNotes": [],
          "key": "swim",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": false,
    },
    "useMagicDevice": SkillGroup {
      "key": "useMagicDevice",
      "skills": [
        Skill {
          "ability": "cha",
          "classSkill": false,
          "conditionNotes": [],
          "key": "useMagicDevice",
          "misc": 0,
          "mod": 0,
          "name": "",
          "notes": "",
          "penalty": false,
          "ranks": 0,
          "temp": 0,
        },
      ],
      "trained": true,
    },
  },
  "spells": Spells {
    "dcAbility": null,
    "dcBonus": null,
    "level_0": SpellLevelList {
      "dc": 10,
      "dcBonus": 0,
      "known": 0,
      "level": "level_0",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_1": SpellLevelList {
      "dc": 11,
      "dcBonus": 0,
      "known": 0,
      "level": "level_1",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_2": SpellLevelList {
      "dc": 12,
      "dcBonus": 0,
      "known": 0,
      "level": "level_2",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_3": SpellLevelList {
      "dc": 13,
      "dcBonus": 0,
      "known": 0,
      "level": "level_3",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_4": SpellLevelList {
      "dc": 14,
      "dcBonus": 0,
      "known": 0,
      "level": "level_4",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_5": SpellLevelList {
      "dc": 15,
      "dcBonus": 0,
      "known": 0,
      "level": "level_5",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_6": SpellLevelList {
      "dc": 16,
      "dcBonus": 0,
      "known": 0,
      "level": "level_6",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_7": SpellLevelList {
      "dc": 17,
      "dcBonus": 0,
      "known": 0,
      "level": "level_7",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_8": SpellLevelList {
      "dc": 18,
      "dcBonus": 0,
      "known": 0,
      "level": "level_8",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "level_9": SpellLevelList {
      "dc": 19,
      "dcBonus": 0,
      "known": 0,
      "level": "level_9",
      "perDay": 0,
      "perDayBonus": 0,
      "spells": [],
      "totalPerDay": 0,
    },
    "spellLikeAbilities": [],
  },
  "str": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "str",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
  "system": "pathfinder",
  "traits": [],
  "version": 4,
  "will": Save {
    "ability": "wis",
    "bonus": 0,
    "key": "will",
    "misc": 0,
    "mod": 0,
    "notes": "",
  },
  "wis": Ability {
    "base": 10,
    "bonus": 0,
    "checkMod": 0,
    "conditionNotes": [],
    "damage": 0,
    "key": "wis",
    "mod": 0,
    "notes": "",
    "skillCheckMod": 0,
    "temp": 0,
    "total": 10,
    "totalNoTemp": 10,
  },
}
`;
